--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ var/
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+pip-selfcheck.json
 
 # Unit test / coverage reports
 htmlcov/
@@ -60,3 +61,6 @@ target/
 bin/
 lib64
 pyvenv.cfg
+
+# nosetests
+man/
